--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview"  
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.6.0",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "zustand": "^4.5.5",
     "swiper": "^11.2.2"
   },
   "devDependencies": {
